# FilesSharing

./: .gitignore  README.md
client/: .gitignore  CMakeLists.txt  client  client.cpp  client_logic.cpp  client_logic.h  tests.cpp
client/modules/: FindInotify.cmake
client/test_dir/bbb/: ccc.txt
common/: api.cpp  api.h  client_api.cpp  client_api.h  client_socket.cpp  client_socket.h  client_socket_manager.cpp  client_socket_manager.h  communication_manager.cpp  communication_manager.h  deleted_file_list.cpp  deleted_file_list.h  file_diff.cpp  file_diff.h  file_scanner.cpp  file_scanner.h  server_api.cpp  server_api.h  sockets.h  utils.h
server/: .gitignore  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  ClientsManager.cpp  ClientsManager.h  RuntimeContext.cpp  RuntimeContext.h  ServerManager.cpp  ServerManager.h  ServerSocket.cpp  ServerSocket.h  server.cpp  tests.cpp
server/Actions/: ActionsContainer.cpp  ActionsContainer.h  GetServerDeletedList.cpp  GetServerDeletedList.h  IAction.h  MarkAsDeletedAction.cpp  MarkAsDeletedAction.h  ReceiveFileFromClient.cpp  ReceiveFileFromClient.h  SendFile.cpp  SendFile.h  SendFileList.cpp  SendFileList.h  SendTimeStamp.cpp  SendTimeStamp.h
server/syncRoot/: FileList  testFile.file
